# stabby-example

./: .gitignore  Cargo.toml  README.md
plugin-a/: Cargo.toml
plugin-a/src/: lib.rs
plugin-core/: Cargo.toml
plugin-core/src/: lib.rs
src/: main.rs
